# SoftRasterizer

./: .gitignore  CMakeLists.txt  README.md  buildandrun.sh  cat_command.sh
docs/: BLINN-PHONG-SHADER.md  CAMERA.md  DIFFUSE-TEXTURE.md  FPS_Camera_Movement_Guide.md  LINE-DRAWING-ALGORITHM.md  MATMUL_ACCELERATION.md  Mipmap.md  NORMAL-MAPPING.md  OBJ-RENDERING-IMPLEMENTATION.md  PERSPECTIVE-PROJECTION.md  QUATERNION.md  RENDERING-PIPELINE.md  SDL.md  SOFTRASTERIZER-INTRODUCTION.md  TEXTURE-MAPPINGS.md  ThreadPool.md  Z-BUFFER-IMPLEMENTATION.md
include/core/: blinn_phong_shader.h  camera.h  framebuffer.h  light.h  material.h  model.h  renderer.h  resource_manager.h  scene.h  sdl_app.h  shader.h  texture.h  threadpool.h  vertex.h
include/core/texture/: dds_texture.h  texture.h  tga_texture.h
include/io/: debug.h  tga_writer.h
include/math/: matrix.h  quaternion.h  transform.h  vector.h
scenes/: scene.yaml
src/: main.cpp  test.cpp
src/core/: blinn_phong_shader.cpp  camera.cpp  framebuffer.cpp  material.cpp  model.cpp  renderer.cpp  resource_manager.cpp  scene.cpp  sdl_app.cpp  texture.cpp  threadpool.cpp
src/core/texture/: dds_texture.cpp  texture.cpp  tga_texture.cpp
src/io/: tga_writer.cpp  tga_writer.h
src/math/: matrix.cpp  quaternion.cpp  transform.cpp
